# butterfly

./: .gitignore  CLAUDE.md  README.md  index.html
backend/: README.md  card_model.py  main.py  prompts.py  pyproject.toml  script.py
backend/api/: cards.py  code.py  images.py
backend/config/: settings.py
backend/models/: __init__.py  cards.py  requests.py  responses.py
backend/services/: __init__.py  base_model_service.py  card_service.py  code_service.py  image_service.py  validation_service.py
backend/tests/: README.md  conftest.py  test_final_validation.py  test_generate_card_contrasting_pair.py  test_nested_card_conversion.py  test_unknown_card_type_fix.py
backend/utils/: __init__.py  conversion.py  type_checking.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  CardShapeUtil.tsx  InputVariants.module.css  card-shape-types.ts  ui-overrides.tsx
frontend/src/card/: CardShapeUtil.tsx  card-config.ts  card-shape-migrations.ts  card-shape-props.ts  card-shape-types.ts  card-state.ts
frontend/src/components/: CardTypeSelector.tsx  FrequencySlider.tsx  SessionEndOverlay.tsx  SidePanel.tsx
frontend/src/contexts/: SessionContext.tsx
frontend/src/hooks/: useAutoSave.ts  useCardGeneration.ts  useCardTypesInitialization.ts  usePageManager.ts  useSessionManager.ts  useTldrawEvents.ts  useTldrawRestrictions.ts
frontend/src/services/: cardApiService.ts  editorService.ts
frontend/src/styles/: card.module.css
src/: card-config.ts  card-shape-props.ts  card-state.ts  test-image.ts  ui-overrides.tsx
(+8 files in other folders)
