[project]
name = "butterfly-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "python-dotenv",
    "pydantic-ai[logfire]>=0.6.2",
    "nest-asyncio>=1.6.0",
    "logfire>=4.2.0",
    "runware>=0.4.18",
    "anthropic>=0.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest-asyncio>=1.1.0",
]
